--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@koa/router": "^10.0.0",
     "ethers": "^5.0.24",
     "koa": "^2.13.0",
-    "mongoose": "^5.11.8"
+    "mongoose": "^5.11.8",
+    "@openzeppelin/contracts": "^3.2.0"
   }
 }
